fix: frontend to show new dependency data
Also add a couple QoL changes:
- touch the app if its dependencies are updated so that it can be seen
in the list of apps
- add margin to the bottom of the page because the tables did not look
good touching the bottom

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@ body {
 
 #app {
   max-width: 80rem;
-  margin: auto;
+  margin: 0 auto 1.5rem;
 }
 
 @tailwind base;
